--- a/src/components/Pokemon_Info/Card.css
+++ b/src/components/Pokemon_Info/Card.css
@@ -5,5 +5,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   box-shadow: 0 10px 10px black;
 }
