--- a/src/components/Pokemon_Info/Card.css
+++ b/src/components/Pokemon_Info/Card.css
@@ -1,17 +1,36 @@
 .card {
   width: 200px;
-  height: 200px;
+  height: 300px;
   background-color: #9edef9;
   border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
   box-shadow: 0 10px 10px black;
 }
 
 .card-front {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card-back {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: grid;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card-back .pokemon-name {
+  text-align: center;
+}
+
+.card-back .pokemon-type {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
 }
